# botinski

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile
.forgejo/workflows/: build-push.yml  check.yml  ci.yml
.githooks/: pre-commit
.sqlx/: query-05520277ed88480f558585a6219275be990d013b538c41991052e17edc0b876e.json  query-0ac2baeb27d527447116d018e210d599b9324ef66977f2d43d6275ddb7402223.json  query-0cddb86d8c150c4d15a69e3b00cdd69c106c1b866c173d042465d5d00cc645ab.json  query-0f93a4b72d47da0d33a163c747fd410b90631eb2ea58984a49524ec1ad90ddf8.json  query-165fd65726e37a17d612374a6a0a802095e64feea9e62d3cbc45d43bd3e43f69.json  query-16b6d2460cf9c52adae6e7571061cdd4eb2a57994768dca259dbe2c2235acd40.json  query-2c51307f6b7d068d0a20bff61ca2531780ad7ea35477261cf7ba7bee1bea0178.json  query-36a25e6d0da116ebdb4c32341027d05895d291e9ec089baf827595a685e49d68.json  query-544f820d8f076f91d47f3f0ebd33624f04601d08f1fb6b61979df0a035cb2f51.json  query-69c818befd5e10ef18cbf36a86585d6afd2b6090ad1b104db9bfa026757b8214.json  query-6d2ced22aacae1fb72af7f13f435c4b51827f2340f85583309a37abdfe0c9303.json  query-95f2b7afe5bb96051d2e716c14464fd99e8c91088e3161b33d325062d5afa521.json  query-a5f0168a2af994a7ad1cf0f72481280f6448b6adf92b47e970b3db52aae1236d.json  query-a95816b8afe313f8535dc937aefac1b5f2b76dd45df6596268c7f593cefa50a5.json  query-c367a9b3a30b4174071317f043970b4dae16b2400b47bc2269fd1f8954e3018f.json  query-c3e80b8e203c452d4ef8875d997e29a8d5cdb156f77be5f47f3c442a3dc0206a.json  query-d013177464984bd9e1edd227b951a8b35588e3796cccd2ac9905495f888f0281.json  query-e01455581a86db7793f4ba887b473e838e797502b555d6d3663ca7f382a83283.json  query-f5971d3f618d8beb31fac0552d4a090f4de04afb48c9872fd14dbd657fb9a99f.json
migrations/: 20260407173436_create_users_table.down.sql  20260407173436_create_users_table.up.sql  20260409014137_create_sessions_table.up.sql  20260603161206_create_guild_settings_table.up.sql  20260603172005_extend_guild_settings.down.sql  20260603172005_extend_guild_settings.up.sql  20260603173644_add_admin_role_ids.down.sql  20260603173644_add_admin_role_ids.up.sql  20260604080858_create_audit_log_table.down.sql  20260604080858_create_audit_log_table.up.sql  20260604103050_create_guild_queue_table.down.sql  20260604103050_create_guild_queue_table.up.sql  20260604110945_add_empty_channel_leave.down.sql  20260604110945_add_empty_channel_leave.up.sql
nix/: module.nix
public/: music.js
src/: config.rs  db.rs  main.rs  oauth.rs  utils.rs
src/discord/: commands.rs  mod.rs  music_commands.rs
src/http/: components.rs  middleware.rs  mod.rs  pages.rs  templates.rs
src/http/api/: mod.rs  music.rs  settings.rs
src/http/api/music/: mod.rs  sse.rs  view.rs
src/http/pages/: admin.rs  channels.rs  guilds.rs  index.rs  members.rs  mod.rs  music.rs  overview.rs  profile.rs  roles.rs  settings.rs
src/models/: audit_log.rs  guild_queue.rs  guild_settings.rs  mod.rs  session.rs  user.rs  user_role.rs
src/music/: ffmpeg.rs  manager.rs  mod.rs  player.rs  probe.rs  track.rs
templates/: base.askama.html  error.askama.html  index.askama.html
