[package]
name = "botinski"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
enum_dispatch = "0.3.13"
maud = { version = "0.27.0", features = ["axum"] }
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = "0.12.5"
sqlx = { version = "0.8.6", features = [
  "macros",
  "sqlite",
  "runtime-tokio",
  "uuid",
] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tower = { version = "0.5.3", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["fs", "full"] }
tower-livereload = "0.10.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[dev-dependencies]
test-log = "0.2.19"

[build-dependencies]
anyhow = "1.0.102"
