[package]
name = "botinski"
version = "0.1.0"
edition = "2024"

[features]
dev = ["tower-livereload"]

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.10.2", features = ["form"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
enum_dispatch = "0.3.13"
futures = "0.3.31"
maud = { version = "0.27.0", features = ["axum"] }
oauth2 = "5.0.0"
poise = "0.6.1"
rand = "0.10.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
songbird = { version = "0.6.0", features = ["driver", "gateway", "serenity", "rustls"] }
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
sqlx = { version = "0.8.6", features = [
  "macros",
  "sqlite",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
strum = { version = "0.28.0", features = ["derive"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tower = { version = "0.5.3", features = ["full"] }
tower-cookies = { version = "0.11.0", features = ["private", "signed"] }
tower-http = { version = "0.6.8", features = ["fs", "full"] }
tower-livereload = { version = "0.10.3", optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[dev-dependencies]
test-log = "0.2.19"

[build-dependencies]
anyhow = "1.0.102"
